# cpp-project

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md
include/: interface.hpp
source/: interface.cpp  main.cpp
tests/: CMakeLists.txt  test_interface.cpp
